added LightRAG alternative

--- a/references/playground.ipynb
+++ b/references/playground.ipynb
@@ -493,40 +493,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.run_rag_pipeline:=== [RunChatbot] setup_data ===\n",
-      "INFO:src.rag.text_splitter:Loading file documents from paths: ['C:\\\\Users\\\\pault\\\\Documents\\\\3. AI and Machine Learning\\\\2. Deep Learning\\\\1c. App\\\\Projects\\\\LLM App\\\\uploads\\\\7902e860-3c80-42a0-b467-a610268d61be\\\\Paul_Okafor_CV.pdf']\n",
-      "INFO:src.rag.text_splitter:Splitting 1 documents using recursive splitter.\n",
-      "INFO:src.rag.text_splitter:Split into 6 document chunks.\n",
-      "INFO:src.run_rag_pipeline:Total splitted docs: 6\n",
-      "INFO:src.run_rag_pipeline:=== [RunChatbot] setup_vector_store ===\n",
-      "INFO:src.rag.vector_store:Initializing embeddings with type: openai\n",
-      "c:\\Users\\pault\\Documents\\3. AI and Machine Learning\\2. Deep Learning\\1c. App\\Projects\\LLM App\\src\\rag\\vector_store.py:93: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
-      "  self.embeddings = OpenAIEmbeddings(\n",
-      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.rag.vector_store:Embeddings initialized successfully.\n",
-      "INFO:src.rag.vector_store:Initializing vector store with type: pinecone\n",
-      "INFO:pinecone_plugin_interface.logging:Discovering subpackages in _NamespacePath(['c:\\\\Users\\\\pault\\\\anaconda3\\\\envs\\\\app_project\\\\Lib\\\\site-packages\\\\pinecone_plugins'])\n",
-      "INFO:pinecone_plugin_interface.logging:Looking for plugins in pinecone_plugins.inference\n",
-      "INFO:pinecone_plugin_interface.logging:Installing plugin inference into Pinecone\n",
-      "INFO:src.rag.vector_store:Pinecone vector store initialized with index 'langchain-index'.\n",
-      "INFO:src.rag.vector_store:Vector store initialized successfully.\n",
-      "INFO:src.rag.vector_store:Adding 6 documents to the vector store.\n",
-      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.rag.vector_store:Documents added to the vector store successfully.\n",
-      "INFO:src.run_rag_pipeline:Documents added to VectorStoreManager.\n",
-      "INFO:src.run_rag_pipeline:Retriever created successfully.\n",
-      "INFO:src.run_rag_pipeline:=== [RunChatbot] setup_llm_pipeline ===\n",
-      "c:\\Users\\pault\\Documents\\3. AI and Machine Learning\\2. Deep Learning\\1c. App\\Projects\\LLM App\\src\\llm\\openai.py:60: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-      "  self.memory = ConversationBufferMemory(\n",
-      "INFO:src.run_rag_pipeline:LLMPipeline created successfully.\n",
-      "INFO:src.run_rag_pipeline:Retrieval QA chain established in the pipeline.\n"
+      "INFO:src.run_rag_pipeline:=== [RunChatbot] setup_data ===\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "No valid file paths provided in data_value.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 23\u001b[0m\n\u001b[0;32m      5\u001b[0m chatbot \u001b[38;5;241m=\u001b[39m RunChatbot(\n\u001b[0;32m      6\u001b[0m     model_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mopenai\u001b[39m\u001b[38;5;124m\"\u001b[39m,    \u001b[38;5;66;03m# or \"openai\", \"llama\", \"huggingface\"\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     api_key\u001b[38;5;241m=\u001b[39mopenai_api_key,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     19\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     20\u001b[0m )\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# 1) Validate & Split\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m \u001b[43mchatbot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetup_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# 2) Build VectorStore, add docs, get retriever\u001b[39;00m\n\u001b[0;32m     25\u001b[0m chatbot\u001b[38;5;241m.\u001b[39msetup_vector_store()\n",
+      "File \u001b[1;32mc:\\Users\\pault\\Documents\\3. AI and Machine Learning\\2. Deep Learning\\1c. App\\Projects\\LLM App\\src\\run_rag_pipeline.py:185\u001b[0m, in \u001b[0;36mRunChatbot.setup_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    183\u001b[0m     file_paths \u001b[38;5;241m=\u001b[39m [path \u001b[38;5;28;01mfor\u001b[39;00m path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_value \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(path)]\n\u001b[0;32m    184\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_paths:\n\u001b[1;32m--> 185\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo valid file paths provided in data_value.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdocs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msplitter\u001b[38;5;241m.\u001b[39msplit_file_documents(file_paths)\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_value):\n\u001b[0;32m    188\u001b[0m     \u001b[38;5;66;03m# If it's a single file path\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: No valid file paths provided in data_value."
      ]
     }
    ],
@@ -540,7 +526,7 @@
     "    api_key=openai_api_key,\n",
     "    use_rag=True,\n",
     "    data_task=\"file\",  # or \"url\", \"github_repo\", etc.\n",
-    "    data_value=['C:\\\\Users\\\\pault\\\\Documents\\\\3. AI and Machine Learning\\\\2. Deep Learning\\\\1c. App\\\\Projects\\\\LLM App\\\\uploads\\\\7902e860-3c80-42a0-b467-a610268d61be\\\\Paul_Okafor_CV.pdf'],  # path to the folder  \"./data for file\"\n",
+    "    data_value=['C:\\Users\\pault\\Documents\\3. AI and Machine Learning\\2. Deep Learning\\1c. App\\Projects\\LLM App\\uploads\\Paul_Okafor_CV.pdf'],  # path to the folder  \"./data for file\"\n",
     "    # data_value= [r\"C:\\Users\\pault\\Documents\\3. AI and Machine Learning\\2. Deep Learning\\1c. App\\Projects\\LLM App\\uploads\\d260beae-c00e-423a-950b-64b82f99fa83\\Paul_Okafor_CV.pdf\"],\n",
     "    vector_store_type=\"pinecone\",\n",
     "    embedding_type=\"openai\",\n",
@@ -698,10 +684,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pinecone_plugin_interface.logging:Discovering subpackages in _NamespacePath(['c:\\\\Users\\\\pault\\\\anaconda3\\\\envs\\\\app_project\\\\Lib\\\\site-packages\\\\pinecone_plugins'])\n",
+      "INFO:pinecone_plugin_interface.logging:Looking for plugins in pinecone_plugins.inference\n",
+      "INFO:pinecone_plugin_interface.logging:Installing plugin inference into Pinecone\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index is ready for use.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pinecone import Pinecone\n",
+    "\n",
+    "# Initialize Pinecone\n",
+    "pinecone_index_name = \"langchain-index\"\n",
+    "pc = Pinecone(pinecone_api_key=pinecone_api_key)\n",
+    "# pc.create_index(\"my_index\")\n",
+    "\n",
+    "if pc.describe_index(\"langchain-index\").get(\"status\", {}).get(\"state\") != \"Ready\":\n",
+    "    print(\"Index is not ready yet. Please wait for a few minutes.\")\n",
+    "else:\n",
+    "    print(\"Index is ready for use.\")\n",
+    "\n",
+    "index = pc.Index(pinecone_index_name)\n",
+    "\n",
+    "pc.delete_index(pinecone_index_name)"
+   ]
   },
   {
    "cell_type": "markdown",
